<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_frag_title"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:textColor="@color/teal_700"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/hotel_image"
                android:layout_width="240dp"
                android:layout_height="160dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                app:layout_constraintBottom_toTopOf="@+id/check_in_date_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view"
                app:srcCompat="@drawable/hotel_image" />

            <TextView
                android:id="@+id/check_in_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in_date"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/hotel_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <DatePicker
                android:id="@+id/checkin_date_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_text_view" />

            <TextView
                android:id="@+id/check_out_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_out_date"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/checkin_date_picker_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <DatePicker
                android:id="@+id/checkout_date_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_text_view"
                app:layout_constraintStart_toStartOf="@id/check_out_date_text_view"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/guests_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_guests"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/checkout_date_picker_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <EditText
                android:id="@+id/guests_count_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guests_text_view"
                app:layout_constraintTop_toTopOf="@id/guests_text_view"
                app:layout_constraintBottom_toBottomOf="@id/guests_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/number_of_guests_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guests_text_view"
                app:layout_constraintTop_toBottomOf="@id/guests_text_view"
                android:text="@string/enter_your_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/name_text_view"
                app:layout_constraintTop_toTopOf="@id/name_text_view"
                app:layout_constraintBottom_toBottomOf="@id/name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/enter_yout_name_hint" />

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/name_text_view"
                app:layout_constraintTop_toBottomOf="@id/name_text_view"
                android:text="@string/enter_your_address"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start" />

            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/address_text_view"
                app:layout_constraintTop_toTopOf="@id/address_text_view"
                app:layout_constraintBottom_toBottomOf="@id/address_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/enter_your_address_hint" />

            <TextView
                android:id="@+id/search_confirm_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="@id/guests_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_view"/>

            <Button
                android:id="@+id/confirm_my_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_my_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/search_confirm_text_view"/>

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/confirm_my_search_button"/>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/search_button"/>


            <Button
                android:id="@+id/retrieve_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve_from_search_pref"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/clear_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>